# text_searcher

./: Cargo.toml  README.md  sample.txt
.github/workflows/: rust.yml
src/: main.rs
