[package]
name = "text_searcher"
version = "0.1.0"
authors = ["Kaique da Silva <kaeyosthaeron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "src/main.rs"
name = "text-searcher"

[package]
name = "text_searcher"

[dependencies]
regex = "1"
