[package]
name = "text_searcher"
version = "0.1.7"
authors = ["Kaique da Silva <kaeyosthaeron@gmail.com>"]
description = """
A simple text searcher tool
"""
license = "Unlicense OR MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
bench = false
path = "src/main.rs"
name = "text-searcher"

[dependencies]
regex = "1"
